--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -14,6 +14,16 @@
 	<% end %>
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
+			<div class="flex-col items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 mx-5 pr-16">
+				<%= image_pack_tag ["hero/bebendo.jpg","hero/dancando.jpg", "hero/skate.jpg", "hero/leitor-e-cao.jpg", "hero/passeando.jpg"].sample %>
+				<div>
+					<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">Aproveite a cidade de Porto Alegre</h2>
+					<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
+						Aprendemos o que você gosta e não gosta para te sugerir eventos, atividades, promoções e serviços que vão
+					de lazer a educação. Assim, você descobre coisas novas e não perde o que já conhece.
+					</span>
+				</div>
+			</div>
 			<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% if @upcoming_events.present? %>
 				<div class="font-display text-gray-900 font-bold pb-5 px-5 text-2xl md:text-3xl pt-4">
