--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -143,13 +143,13 @@
 	</div>
 	<% if display_similar && event.similar_data.present? %>
 		<div class="w-full mt-auto"
-				 data-controller="toggle-loader"
-				 data-toggle-loader-listener-off="event#showSimilar->finished">
+				 data-controller="loader"
+				 data-loader-on-loaded="event#showSimilar->finished">
 			<div
 				class="flex justify-center px-2 py-2 text-sm text-gray-600 bg-gray-50 rounded-b-lg cursor-pointer hover:bg-gray-50 hover:border-none"
-				data-action="click->event#showSimilar click->toggle-loader#toggle"
+				data-action="click->event#showSimilar click->loader#toggle"
 				data-toggle-style-target="similar"
-				data-toggle-loader-target="off"
+				data-loader-target="loaded"
 				title="Mostrar eventos parecidos">
 				Similares
 				<svg class="w-3 h-3 my-auto ml-1 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -159,9 +159,9 @@
 			</div>
 			<div
 				class="flex justify-center hidden px-2 py-2 text-sm text-gray-600 bg-gray-50 rounded-b-lg cursor-pointer hover:bg-gray-50 hover:border-none"
-				data-toggle-loader-target="on">
+				data-loader-target="loading">
 				Carregando
-				<svg data-toggle-loader-target="onIcon" class="w-4 h-4 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg data-loader-target="onIcon" class="w-4 h-4 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path fill="none" d="M0 0h24v24H0V0z"/>
 					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 				</svg>
