--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -33,19 +33,19 @@
 	</section>
 	<% unless mobile_device? %>
 		<section id="right-sidebar" class="hidden md:inline-block md:bg-white md:h-full md:col-span-4 will-change">
-			<div data-controller="toggle-loader"
-					 data-toggle-loader-listener-on="horizontal-event#open-event:before"
-					 data-toggle-loader-listener-off="horizontal-event#open-event:success"
+			<div data-controller="loader"
+					 data-loader-on-loading="horizontal-event#open-event:before"
+					 data-loader-on-loaded="horizontal-event#open-event:success"
 					 class="px-5 sticky top-20 z-10">
 				<div id="open-event"
-						 data-toggle-loader-target="off">
+						 data-loader-target="loaded">
 					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
 				</div>
 				<div
 					class="flex items-center justify-center hidden h-16 mt-5 bg-white border border-gray-100 shadow-lg h-screen-8/10 rounded-xl text-md"
-					data-toggle-loader-target="on">
+					data-loader-target="loading">
 					Carregando
-					<svg data-toggle-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+					<svg data-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path fill="none" d="M0 0h24v24H0V0z"/>
 						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 					</svg>
