Add small animations to events suggestions

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -37,7 +37,7 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_train_message %>
-					<div class="bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
+					<div class="animation-show animation-2s animation-once bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
 						<div id="end-message-title" class="px-5 text-brand-700">
 							<div class="font-bold"><%= "Obrigado #{@user.first_name}!" %></div>
 							<div class="font-light">Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
@@ -53,7 +53,7 @@
 <!--							Com base nos eventos que você curtiu-->
 <!--						</div>-->
 						<div class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
-							Indicado para você
+							Sugestões para você
 						</div>
 					</div>
 					<div data-controller="loader"
@@ -74,7 +74,7 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_suggestions_message %>
-					<div class="bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
+					<div class="animation-show animation-2s animation-once bg-brand-100 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
 						<div id="end-message-title" class="font-semibold px-5 text-gray-600">
 							<%= "Você já viu todas as recomendações que eu tinha para você hoje 😃" %>
 						</div>
