--- a/web/app/components/modal/sign_in_component.html.erb
+++ b/web/app/components/modal/sign_in_component.html.erb
@@ -40,7 +40,7 @@
 							</div>
 							<div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
 								<h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-									Você precisa de um conta
+									Você precisa de uma conta
 								</h3>
 								<div class="mt-2">
 									<p class="text-sm text-gray-500">
