--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -48,10 +48,7 @@
 					</div>
 				<% end %>
 				<% if current_stage == :suggestions %>
-					<div class="mb-5">
-<!--						<div class="text-xs md:text-sm text-gray-400">-->
-<!--							Com base nos eventos que você curtiu-->
-<!--						</div>-->
+					<div class="md:mb-5">
 						<div class="font-bold font-display text-gray-900 text-2xl md:text-3xl">
 							Sugestões para você
 						</div>
