--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -26,8 +26,17 @@
 			</div>
 			<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% if @upcoming_events.present? %>
-				<div class="font-display text-gray-900 font-bold md:pb-1 px-5 text-2xl md:text-3xl pt-4">
-					Eventos em Porto Alegre
+				<div class="pt-4">
+					<h2 class="font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
+						Eventos em Porto Alegre
+					</h2>
+					<div class="flex gap-1 px-5 text-gray-400 text-sm items-center" title="Devido ao Covid19 o número de eventos está abaixo do normal">
+						Atualizado em <%= time_ago_in_words @upcoming_events&.last&.updated_at %>
+						<svg class="stroke-current w-4 h-4" fill="none"
+								 stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+						</svg>
+					</div>
 				</div>
 			<% end %>
 			<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, open_in_sidebar: true) %>
