--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -31,7 +31,7 @@
 						Eventos em Porto Alegre
 					</h2>
 					<div class="flex gap-1 px-5 text-gray-400 text-sm items-center" title="Devido ao Covid19 o número de eventos está abaixo do normal">
-						Atualizado em <%= time_ago_in_words @upcoming_events&.last&.updated_at %>
+						Atualizado há <%= time_ago_in_words @upcoming_events&.last&.updated_at %>
 						<svg class="stroke-current w-4 h-4" fill="none"
 								 stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
