--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -14,7 +14,7 @@
 	<% end %>
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
-			<div class="flex flex-col flex-col-reverse gap-4 items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 md:px-5 mx-5 pr-16" style="min-height: 252px;">
+			<div class="select-none tap-highlight-none flex flex-col flex-col-reverse gap-4 items-center mb-12 md:flex md:flex-row md:mx-0 md:pr-0 md:px-5 mx-5 pr-16" style="min-height: 252px;">
 				<div>
 					<h2 class="font-bold font-display text-gray-900 text-2xl md:text-3xl">Aproveite a cidade de Porto Alegre</h2>
 					<span class="inline-block leading-snug mt-2 text-gray-500 text-sm">
