--- a/web/app/components/left_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/left_sidebar/group_by_day_list_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, class: 'pb-10' do %>
-	<% @events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
+	<% @events.group_by { |e| e.start_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
 		<div class="bg-white">
 			<div id="vertical-daily-events">
 				<%= render LeftSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, parent_key: @parent_key) %>
