--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -119,7 +119,7 @@
 				<%= link_to limit_name_size(event.details_name), event_path(event), class: 'font-semibold group-hover:text-brand-500 inline-block mt-1 text-gray-800 text-sm textfont-semibold', data: {target: 'event.name'} %>
 			<% end %>
 			<span class="<%= html.dig(:time_until, :css) || 'text-sm inline-block' %>">
-				<%= "#{I18n.l(event.first_day_time.to_date, format: :week).titlecase} #{format_hour event.first_day_time} · #{time_until event}" %>
+				<%= "#{I18n.l(event.start_time.to_date, format: :week).titlecase} #{format_hour event.start_time} · #{time_until event}" %>
 				em <%= limit_place_name_size(event.place_details_name, 20) %>
 			</span>
 			<% if display_place || display_similar %>
