--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -69,16 +69,17 @@
 		<div class="flex p-5 border-t border-b border-gray-100">
 			<div class="flex flex-col justify-center px-3 py-2 my-auto mr-3 text-center text-brand-600 bg-brand-100 h-content rounded-xl w-content">
 				<div class="font-bold leading-tight text-sm uppercase">
+					<%= @event.start_time %>
 					<% if @event.day_of_week['date'] < Date.today + 7 %>
 						<%= I18n.l(@event.day_of_week['date'], format: :week) %>
 					<% else %>
 						<%= I18n.l(@event.day_of_week['date'], format: :long) %>
 					<% end %>
 				</div>
-				<div class="text-sm"><%= helpers.format_hour @event.first_day_time %></div>
+				<div class="text-sm"><%= helpers.format_hour @event.start_time %></div>
 			</div>
 			<div class="my-auto text-sm leading-snug text-gray-600">
-				O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :week) %> dia <%= I18n.l(@event.day_of_week['date'], format: :long) %> às <%= helpers.format_hour @event.first_day_time %>, daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
+				O evento acontecerá <%= I18n.l(@event.day_of_week['date'], format: :week) %> dia <%= I18n.l(@event.day_of_week['date'], format: :long) %> às <%= helpers.format_hour @event.start_time %>, daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>.
 			</div>
 		</div>
 		<div class="px-5 py-5 border-b border-gray-100">
