--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -70,7 +70,7 @@
 					<%= I18n.l(event.day_of_week['date'], format: :long) %>
 				<% end %>
 			</div>
-			<div class="text-sm"><%= format_hour event.first_day_time %></div>
+			<div class="text-sm"><%= format_hour event.start_time %></div>
 		</div>
 		<div class="my-auto text-sm leading-snug text-gray-800">
 			O evento acontecerá
